Update and rename fix lcp for complianz message on mobile to fix-lcp-for-complianz-message-on-mobile.css

--- a/fix-lcp-for-complianz-message-on-mobile.css
+++ b/fix-lcp-for-complianz-message-on-mobile.css
@@ -5,7 +5,7 @@
 @media only screen and (max-width: 480px) {
 #cmplz-cookiebanner .cmplz-message { 
   overflow: scroll; 
-  height: 120px;
+  height: 50px;
  } 
 }
 
